<resources>
    <string name="app_name">HackPRFinal</string>
    <string name="waiter_text">Waiter Options:</string>
    <string name="btn_intmenutext">Interactive Menu</string>
    <string name="btnDisplayOrder">Display Unpaid Order</string>
    <string name="btnmenu_organizer">Menu Organizer</string>
    <string name="btnwaiter">Waiter</string>
    <string name="textwelcome">Welcome!</string>
    <string name="btnmodify_menu_item">Modify Menu Item</string>
    <string name="btnadd_new_menu_item">Add New Menu Item</string>
    <string name="textmenu_options">Menu Options:</string>
    <string-array name="spinner">
        <item>Meat</item>
        <item>Chicken</item>
        <item>Beverage</item>
        <item>Dessert</item>
    </string-array>
</resources>
