<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cod5_.hackprfinal.MenuMod"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textmenu_options"
        android:id="@+id/textView3"
        android:gravity="center" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/btnadd_new_menu_item"
        android:id="@+id/btnAddMenu"
        android:layout_weight="0.29" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/btnmodify_menu_item"
        android:id="@+id/btnModMenu"
        android:layout_weight="0.30" />
</LinearLayout>
