<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cod5_.hackprfinal.Waiter"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/waiter_text"
        android:id="@+id/textView2"
        android:gravity="center" />

    <Button
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_intmenutext"
        android:id="@+id/btnInterMenu"
        android:gravity="center"
        android:layout_weight="0.35"
        android:textSize="24sp" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDisplayOrder"
        android:id="@+id/btnDisplayOrder"
        android:layout_weight="0.34"
        android:textSize="24sp" />
</LinearLayout>
